--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -890,9 +890,15 @@ select {
 .offcanvas--cart {
   right: 0;
   padding: 30px 10px 30px 30px;
-  max-width: 400px;
-  min-width: 300px;
+  width: 100%;
+  width: 400px;
   transform: translateX(100%);
+}
+@media (max-width: 480px) {
+  .offcanvas--cart {
+    width: 100%;
+    min-width: 300px;
+  }
 }
 .offcanvas--cart::-webkit-scrollbar {
   width: 0px;
